--- a/templates/index.html
+++ b/templates/index.html
@@ -36,14 +36,15 @@
             {% for el in row %}
               {% if row.index(el) == 5 %}
                 <td scope="row">
-                <form action="" name="did" method="post">
-                  <input type="submit" name="{{ row[0] }}" value="{{ row[0] }}" class="hbtn">
+                <form action="" method="POST">
+                  <!-- <input type="submit" name="delid" value="{{ row[0] }}" class="hbtn"> -->
+                  <button type="submit" name="delid" value="{{ row[0] }}" class="hbtn">
                   
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
                       <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
                     </svg>
-                  
-                </input>
+                  </button>
+                  <!-- <input type="submit" name="delid" value="a"> -->
                 </form>
                 </td>
               {% else %}
@@ -81,6 +82,7 @@
             />
             <br />
             <input class="mt-2 btn btn-info" type="submit" value="Add record" name="add" />
+            {{ validate|safe }}
           </p>
         </form>
 
