update start.bat and changin inpmaspas in log out

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 
         <!-- INPUT MASPAS FORM -->
         <form action="" method="POST" name="inpmaspas">
-          <input class="btn btn-warning" type="submit" value="Input Maspas" name="inpmaspas" />
+          <input class="btn btn-outline-danger" type="submit" value="Log out" name="inpmaspas" />
         </form>
 
 
@@ -86,6 +86,7 @@
           </p>
         </form>
 
+        
         <!-- DELETE FORM -->
         <form action="" method="POST" name="delrec" class="mt-3 pt-1 px-2 border border-2 rounded-3" style="width: fit-content;">
           <p>
